deploy/api-gateway/ocp/api-gateway-dev-template.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    app: api-gateway
    deploymentconfig: api-gateway
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
      labels:
        app: api-gateway
        deploymentconfig: api-gateway
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: dev
          image: ' '
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: api-gateway
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config
              name: api-gateway-config-vol
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: api-gateway-config
          name: api-gateway-config-vol
  test: false
  triggers:
    - type: ConfigChange
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: api-gateway
    deploymentconfig: api-gateway
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: api-gateway
    weight: 100
  wildcardPolicy: None
